--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
             <p id="placeholder-text">Notes you add appear here</p>
         </div>
     </main>
+    <script src="js/app.js"></script>
 </body>
 </html>
