--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="modal">
+        <div class="modal-content">
+            <input type="text" class="modal-title" placeholder="Title">
+            <input type="text" class="modal-text" placeholder="Take a note...">
+            <span class="modal-close-button">Close</span>
+        </div>
+    </div>
     <main>
         <header>
             <img class="header-logo" src="https://www.gstatic.com/images/branding/product/1x/keep_48dp.png" alt="">
