--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="notes"></div>
         <div id="placeholder">
-            <img src="placeholder-logo" src="https://icon.now.sh/lightbulb_outline">
+            <img id="placeholder-logo" src="https://image.flaticon.com/icons/png/128/484/484150.png">
             <p id="placeholder-text">Notes you add appear here</p>
         </div>
         <div id="color-tooltip">
